	* Ampersands in links should work correctly (Tim Ringenbach)
	* DirectIM and IM Image support for AIM are greatly improved
	  (Tim Ringenbach)
	* Gadu-Gadu updates (Andrew Wellington)
	* Print Gadu-Gadu messages to the debug window instead of the console
	* Updated and standardized blist signals (Gary Kramlich)
	* Made the recieve-*-msg signals match the sending ones (Stu Tomlinson)

	Preference Changes:
	* Added "Conversation placement - By conversation count"
	* Added a "none" smiley theme to replace the "Show graphical
	  smileys" option
	* Replace default formatting preferences with a dialog to set a
	  default formatting in a WYSIWYG manner.
	* Removed "Show logins in window," default to yes
	* Removed "Send URLs as links," default to yes (in protocols that
	  support HTML)
	* Removed "Show URLs as links," default to yes
	* Removed New window height & width and Entry field height for Chats & IMs,
	  sizes are now saved automatically
	* Removed "Tab-complete nicks" default to yes
	* Removed "Old-style tab completion", no longer supported
	* Removed "Sending message removes away status", default to no
	* Replaced "Ignore colors", "Ignore font faces" and "Ignore font sizes"
	  with "Ignore formatting on incoming messages"
	* Removed "Show numbers in groups", default to yes
	* Removed "Icons on tabs", default to yes
	* Removed "Sounds when you log in", default to no
	* Removed "Seconds before resending autoresponse", default to 600 seconds
	* Removed "Send autoresponse in active conversations", default to no
	* Removed "Show people joining in window", default to yes
	* Removed "Show people leaving in window", default to yes

version 0.77 (04/22/2004):
	New Features:
	* The System Log returns (Ka-Hing Cheung)
	* Added a conversation-drag-ended signal (Etan Reisner)
	* Reorganized and cleaned up the MSN protocol plugin (Felipe Contreras)
	* Added the -c option to specify location of the .gaim directory, removed